--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,13 @@
 .site-header {
   font-family: monospace;
 }
+
+.listitems {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  text-align: right;
+}
